--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ python-mimeparse==1.6.0
 singledispatch==3.4.0.3
 six==1.11.0
 pandas==1.0.0
+numpy==1.7.0
+scipy==0.11.0
+scikit-learn==0.13.1
+matplotlib==1.1.0
